force-app/main/default/objects/LeanData__LD_Search_2__c/LeanData__LD_Search_2__c.object-meta.xml
<CustomObject>
    <label>LeanData Search</label>
    <nameField>
        <label>LeanData Search Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LeanData Searches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>