force-app/main/default/objects/LeanData__LD_Search_2__c/fields/LeanData__Match_1__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Match_1__c</fullName>
    <label>Match 1</label>
    <length>3072</length>
    <type>LongTextArea</type>
</CustomField>