force-app/main/default/objects/LeanData__LD_Search_2__c/fields/LeanData__Search_16__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Search_16__c</fullName>
    <externalId>true</externalId>
    <label>Search 16</label>
    <length>255</length>
    <type>Text</type>
</CustomField>