force-app/main/default/objects/LeanData__LD_Search_2__c/fields/LeanData__Type__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Type__c</fullName>
    <label>Type</label>
    <length>128</length>
    <type>Text</type>
</CustomField>